small letter spacing fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,7 +73,7 @@ p.form-lead {
   }
 }
 label {
-  letter-spacing: -0.2px;
+  letter-spacing: 0.21px;
   margin-bottom: 3px;
 }
 .form-control {
